# assignment-play

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/db/: database.py  seed.py
app/middleware/: auth.py
app/models/: clip.py
app/routes/: play.py
app/schemas/: clip.py
tests/: test_api.py
